# OOP-problems

./: CMakeLists.txt  README.md  main.cpp
entities/: Client.cpp  Client.h  Goods.cpp  Goods.h  Order.cpp  Order.h
src/catalog/: Catalog.cpp  Catalog.h
src/cms/: CMS.cpp  CMS.h
src/entities/: Goods.cpp  Goods.h  Order.cpp  Order.h
src/logger/: Logger.cpp  Logger.h
src/warehouse/: Warehouse.cpp  Warehouse.h
